--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "5 người thoát chết khi ôtô lao xuống sông vì theo Google Maps",
+    "content": "Một gia đình gồm 5 người đã thoát chết khi chiếc ôtô của họ lao xuống sông Gayathripuzha, Ấn Độ, do tuân theo hướng dẫn của Google Maps. Sự việc xảy ra vào lúc 19h30 ngày 16/3 khi họ đang trở về từ chuyến đi mua sắm. Mặc dù ôtô chìm hơn một nửa dưới nước, nhưng may mắn là tất cả các thành viên trong gia đình đều không bị thương. Tai nạn này đã làm dấy lên lo ngại về độ tin cậy của các ứng dụng định vị trong việc chỉ đường, đặc biệt ở những khu vực hạ tầng giao thông kém phát triển.",
+    "link": "https://vnexpress.net/5-nguoi-thoat-chet-khi-oto-lao-xuong-song-vi-theo-google-maps-4863161.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 6,
+    "question": "Tai nạn ôtô lao xuống sông xảy ra ở đâu?",
+    "answers": [
+      {
+        "text": "sông Gayathripuzha, Ấn Độ",
+        "correct": true
+      },
+      {
+        "text": "sông Hàn, Đà Nẵng",
+        "correct": false
+      },
+      {
+        "text": "sông Thames, Anh",
+        "correct": false
+      },
+      {
+        "text": "sông Mekong, Việt Nam",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Lỡ cơ hội làm cha vì 8 năm uống thuốc tăng sinh lực mua trên mạng",
     "content": "Một người đàn ông ngoài 40 tuổi đã tự ý uống thuốc tăng cường sinh lý mua trên mạng trong suốt 8 năm mà không có hiệu quả trong việc điều trị vô sinh. Sau khi không có con trong 9 năm, anh và vợ quyết định đến bệnh viện kiểm tra và nhận thấy tình trạng vô tinh vẫn không thay đổi. Bác sĩ cho biết việc uống thuốc không rõ nguồn gốc đã làm họ bỏ lỡ cơ hội điều trị đúng cách và nhấn mạnh tầm quan trọng của việc tham khảo ý kiến bác sĩ trước khi sử dụng bất kỳ loại thuốc nào.",
     "link": "https://vnexpress.net/lo-co-hoi-lam-cha-vi-8-nam-uong-thuoc-tang-sinh-luc-mua-tren-mang-4862846.html",
@@ -1503,33 +1530,6 @@
     ]
   },
   {
-    "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
-    "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
-    "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
-    "cat": "giai-tri",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Lee Jun Ki phản hồi như thế nào về thông tin trốn thuế?",
-    "answers": [
-      {
-        "text": "Anh đã nộp toàn bộ số tiền truy thu và khiếu nại quyết định của cơ quan thuế.",
-        "correct": true
-      },
-      {
-        "text": "Anh phủ nhận toàn bộ thông tin và không có bất kỳ phản hồi nào.",
-        "correct": false
-      },
-      {
-        "text": "Anh thừa nhận đã trốn thuế và chấp nhận hình phạt.",
-        "correct": false
-      },
-      {
-        "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "GAC tung ưu đãi ba dòng xe trong tháng 3",
     "content": "GAC Motor Việt Nam vừa công bố chương trình ưu đãi cho ba dòng xe gồm M6 Pro, M8 và GS8 trong tháng 3. Khách hàng mua M6 Pro sẽ nhận 7 năm bảo hành, miễn phí dịch vụ cứu hộ 24/7 và thêm đồng hồ thông minh cho phiên bản 1.5T GL. M8 cũng có các ưu đãi tương tự, với quà tặng tiền mặt cho bản GL Master, trong khi GS8 được miễn lệ phí trước bạ và hưởng chính sách bảo hành như trên.",
     "link": "https://vnexpress.net/gac-tung-uu-dai-ba-dong-xe-trong-thang-3-4863400.html",
@@ -1552,64 +1552,6 @@
       },
       {
         "text": "Không có thông tin nào về ưu đãi cho xe GAC.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "6 mẹo giúp bỏ thuốc lá",
-    "content": "Bài viết đưa ra 6 mẹo giúp người hút thuốc lá từ bỏ thói quen này, bao gồm việc lập kế hoạch cụ thể, củng cố ý chí, thay đổi lối sống lành mạnh, tìm kiếm phương pháp thay thế, tìm kiếm sự hỗ trợ từ người thân và sử dụng thuốc theo toa nếu cần. Việc cai thuốc lá cần sự kiên trì và quyết tâm cao, đồng thời nhận thức rõ ràng về tác hại của thuốc lá với sức khỏe.",
-    "link": "https://vnexpress.net/6-meo-giup-bo-thuoc-la-4863176.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Làm thế nào để bỏ thuốc lá hiệu quả?",
-    "answers": [
-      {
-        "text": "Lập kế hoạch cai thuốc và thay đổi lối sống.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cần bỏ thuốc là sẽ không còn thèm thuốc.",
-        "correct": false
-      },
-      {
-        "text": "Hút thuốc ít hơn mỗi ngày là đủ.",
-        "correct": false
-      },
-      {
-        "text": "Không cần phải có sự hỗ trợ từ người khác.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "5 đồ uống góp phần tăng cường sinh lý nữ",
-    "content": "Bài viết giới thiệu 5 loại đồ uống có lợi giúp tăng cường sinh lý nữ, bao gồm trà xanh, sinh tố chuối, cà phê đen, rượu vang đỏ và nước ép lựu. Những đồ uống này chứa nhiều chất chống oxy hóa và vitamin, hỗ trợ cải thiện sức khỏe sinh lý và ổn định nội tiết tố. Bên cạnh việc sử dụng các loại đồ uống này, lối sống lành mạnh như tập thể dục và chế độ ăn uống cân bằng cũng rất quan trọng để nâng cao sức khỏe tổng thể của phụ nữ.",
-    "link": "https://vnexpress.net/5-do-uong-gop-phan-tang-cuong-sinh-ly-nu-4863206.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những loại đồ uống nào có thể giúp tăng cường sinh lý nữ?",
-    "answers": [
-      {
-        "text": "Trà xanh, sinh tố chuối, cà phê đen, rượu vang đỏ, nước ép lựu",
-        "correct": true
-      },
-      {
-        "text": "Nước ngọt có ga",
-        "correct": false
-      },
-      {
-        "text": "Trà sữa",
-        "correct": false
-      },
-      {
-        "text": "Sữa đặc có đường",
-        "correct": false
-      },
-      {
-        "text": "Nước lọc",
         "correct": false
       }
     ]
@@ -1646,6 +1588,37 @@
     ]
   },
   {
+    "title": "5 đồ uống góp phần tăng cường sinh lý nữ",
+    "content": "Bài viết giới thiệu 5 loại đồ uống có lợi giúp tăng cường sinh lý nữ, bao gồm trà xanh, sinh tố chuối, cà phê đen, rượu vang đỏ và nước ép lựu. Những đồ uống này chứa nhiều chất chống oxy hóa và vitamin, hỗ trợ cải thiện sức khỏe sinh lý và ổn định nội tiết tố. Bên cạnh việc sử dụng các loại đồ uống này, lối sống lành mạnh như tập thể dục và chế độ ăn uống cân bằng cũng rất quan trọng để nâng cao sức khỏe tổng thể của phụ nữ.",
+    "link": "https://vnexpress.net/5-do-uong-gop-phan-tang-cuong-sinh-ly-nu-4863206.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những loại đồ uống nào có thể giúp tăng cường sinh lý nữ?",
+    "answers": [
+      {
+        "text": "Trà xanh, sinh tố chuối, cà phê đen, rượu vang đỏ, nước ép lựu",
+        "correct": true
+      },
+      {
+        "text": "Nước ngọt có ga",
+        "correct": false
+      },
+      {
+        "text": "Trà sữa",
+        "correct": false
+      },
+      {
+        "text": "Sữa đặc có đường",
+        "correct": false
+      },
+      {
+        "text": "Nước lọc",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ăn uống, sinh hoạt thế nào khi còn một quả thận?",
     "content": "Bài viết cung cấp thông tin về cách sinh hoạt và chế độ ăn uống cho người còn một quả thận. Sau phẫu thuật cắt thận, người bệnh cần chú ý bảo vệ sức khỏe, tránh các môn thể thao va chạm và áp dụng chế độ dinh dưỡng lành mạnh, cân bằng, giảm muối và hạn chế thực phẩm chứa kali, phốt pho. Đồng thời, cần theo dõi sức khỏe định kỳ và thận trọng khi sử dụng thuốc không kê đơn.",
     "link": "https://vnexpress.net/an-uong-sinh-hoat-the-nao-khi-con-mot-qua-than-4863313.html",
@@ -1668,6 +1641,60 @@
       },
       {
         "text": "Không cần kiểm tra sức khỏe định kỳ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
+    "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
+    "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
+    "cat": "giai-tri",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Lee Jun Ki phản hồi như thế nào về thông tin trốn thuế?",
+    "answers": [
+      {
+        "text": "Anh đã nộp toàn bộ số tiền truy thu và khiếu nại quyết định của cơ quan thuế.",
+        "correct": true
+      },
+      {
+        "text": "Anh phủ nhận toàn bộ thông tin và không có bất kỳ phản hồi nào.",
+        "correct": false
+      },
+      {
+        "text": "Anh thừa nhận đã trốn thuế và chấp nhận hình phạt.",
+        "correct": false
+      },
+      {
+        "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "6 mẹo giúp bỏ thuốc lá",
+    "content": "Bài viết đưa ra 6 mẹo giúp người hút thuốc lá từ bỏ thói quen này, bao gồm việc lập kế hoạch cụ thể, củng cố ý chí, thay đổi lối sống lành mạnh, tìm kiếm phương pháp thay thế, tìm kiếm sự hỗ trợ từ người thân và sử dụng thuốc theo toa nếu cần. Việc cai thuốc lá cần sự kiên trì và quyết tâm cao, đồng thời nhận thức rõ ràng về tác hại của thuốc lá với sức khỏe.",
+    "link": "https://vnexpress.net/6-meo-giup-bo-thuoc-la-4863176.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Làm thế nào để bỏ thuốc lá hiệu quả?",
+    "answers": [
+      {
+        "text": "Lập kế hoạch cai thuốc và thay đổi lối sống.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần bỏ thuốc là sẽ không còn thèm thuốc.",
+        "correct": false
+      },
+      {
+        "text": "Hút thuốc ít hơn mỗi ngày là đủ.",
+        "correct": false
+      },
+      {
+        "text": "Không cần phải có sự hỗ trợ từ người khác.",
         "correct": false
       }
     ]
@@ -3544,37 +3571,6 @@
     ]
   },
   {
-    "title": "'Mẹ bỉm sữa' giảm 7 kg trong hai tháng",
-    "content": "Chị Trang, 30 tuổi, đã giảm 7 kg trong hai tháng sau khi áp dụng chế độ ăn uống và tập luyện theo phác đồ của bác sĩ, thay vì nhịn ăn. Sau khi tăng 22 kg trong thời gian mang thai và gặp khó khăn trong việc giảm cân, chị đã tìm đến Trung tâm Kiểm soát cân nặng và được thiết kế một chế độ ăn đủ dinh dưỡng để đảm bảo chất lượng sữa cho con. Kết quả, chị không chỉ giảm cân mà còn cải thiện sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/me-bim-sua-giam-7-kg-trong-hai-thang-4863189.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Chị Trang đã giảm được bao nhiêu kg sau hai tháng điều trị?",
-    "answers": [
-      {
-        "text": "7 kg",
-        "correct": true
-      },
-      {
-        "text": "5 kg",
-        "correct": false
-      },
-      {
-        "text": "10 kg",
-        "correct": false
-      },
-      {
-        "text": "8 kg",
-        "correct": false
-      },
-      {
-        "text": "6 kg",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dấu hiệu nào ở tay, vai cảnh báo ung thư phổi?",
     "content": "Ung thư phổi có thể gây ra các triệu chứng hô hấp như ho ra máu và khó thở. Ngoài ra, khi khối u đã lan rộng, nó có thể xuất hiện các dấu hiệu tại tay và vai, như là hiện tượng ngón tay và bả vai bị ảnh hưởng. Điều này cảnh báo người bệnh cần được kiểm tra kịp thời để phát hiện bệnh.",
     "link": "https://vnexpress.net/dau-hieu-nao-o-tay-vai-canh-bao-ung-thu-phoi-4863116.html",
@@ -3601,6 +3597,37 @@
       },
       {
         "text": "Chóng mặt",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "'Mẹ bỉm sữa' giảm 7 kg trong hai tháng",
+    "content": "Chị Trang, 30 tuổi, đã giảm 7 kg trong hai tháng sau khi áp dụng chế độ ăn uống và tập luyện theo phác đồ của bác sĩ, thay vì nhịn ăn. Sau khi tăng 22 kg trong thời gian mang thai và gặp khó khăn trong việc giảm cân, chị đã tìm đến Trung tâm Kiểm soát cân nặng và được thiết kế một chế độ ăn đủ dinh dưỡng để đảm bảo chất lượng sữa cho con. Kết quả, chị không chỉ giảm cân mà còn cải thiện sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/me-bim-sua-giam-7-kg-trong-hai-thang-4863189.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Chị Trang đã giảm được bao nhiêu kg sau hai tháng điều trị?",
+    "answers": [
+      {
+        "text": "7 kg",
+        "correct": true
+      },
+      {
+        "text": "5 kg",
+        "correct": false
+      },
+      {
+        "text": "10 kg",
+        "correct": false
+      },
+      {
+        "text": "8 kg",
+        "correct": false
+      },
+      {
+        "text": "6 kg",
         "correct": false
       }
     ]
@@ -3919,6 +3946,33 @@
     ]
   },
   {
+    "title": "Chơi tung hứng với bố, bé một tuổi gãy xương đùi",
+    "content": "Trong một vụ tai nạn đáng tiếc, một bé trai một tuổi đã bị gãy xương đùi khi chơi tung hứng với bố. Sau khi nhập viện với tình trạng đau đớn và sợ hãi, bé được bác sĩ tiến hành bó bột toàn thân để ổn định xương gãy. Bác sĩ khuyến cáo rằng các trò chơi mạnh có thể gây hại cho trẻ nhỏ, không chỉ làm gãy xương mà còn ảnh hưởng đến hệ thần kinh của trẻ.",
+    "link": "https://vnexpress.net/choi-tung-hung-voi-bo-be-mot-tuoi-gay-xuong-dui-4862991.html",
+    "cat": "gia-dinh",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao bé một tuổi bị gãy xương đùi khi chơi tung hứng với bố?",
+    "answers": [
+      {
+        "text": "Bé bị gãy xương do chơi tung hứng với bố.",
+        "correct": true
+      },
+      {
+        "text": "Bé bị ngã trong khi chơi đùa.",
+        "correct": false
+      },
+      {
+        "text": "Bé bị tai nạn khi chạy nhảy.",
+        "correct": false
+      },
+      {
+        "text": "Bé bị va chạm với đồ vật trong nhà.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Trẻ rụng tóc do thiếu chất gì?",
     "content": "Trẻ bị rụng tóc có thể do thiếu hụt nhiều loại vitamin và khoáng chất thiết yếu như vitamin B, C, D, sắt, kẽm và selen trong chế độ dinh dưỡng hàng ngày. Thiếu dinh dưỡng có thể dẫn đến tình trạng tóc rụng nhiều hơn 100 sợi mỗi ngày, tóc yếu và dễ gãy. Bác sĩ Trần Thị Trà Phương đã nhấn mạnh tầm quan trọng của việc bổ sung các chất dinh dưỡng này để giúp tóc phát triển khỏe mạnh và ngăn ngừa rụng tóc ở trẻ em.",
     "link": "https://vnexpress.net/tre-rung-toc-do-thieu-chat-gi-4862999.html",
@@ -3945,33 +3999,6 @@
       },
       {
         "text": "Vitamin D và magie",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Chơi tung hứng với bố, bé một tuổi gãy xương đùi",
-    "content": "Trong một vụ tai nạn đáng tiếc, một bé trai một tuổi đã bị gãy xương đùi khi chơi tung hứng với bố. Sau khi nhập viện với tình trạng đau đớn và sợ hãi, bé được bác sĩ tiến hành bó bột toàn thân để ổn định xương gãy. Bác sĩ khuyến cáo rằng các trò chơi mạnh có thể gây hại cho trẻ nhỏ, không chỉ làm gãy xương mà còn ảnh hưởng đến hệ thần kinh của trẻ.",
-    "link": "https://vnexpress.net/choi-tung-hung-voi-bo-be-mot-tuoi-gay-xuong-dui-4862991.html",
-    "cat": "gia-dinh",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao bé một tuổi bị gãy xương đùi khi chơi tung hứng với bố?",
-    "answers": [
-      {
-        "text": "Bé bị gãy xương do chơi tung hứng với bố.",
-        "correct": true
-      },
-      {
-        "text": "Bé bị ngã trong khi chơi đùa.",
-        "correct": false
-      },
-      {
-        "text": "Bé bị tai nạn khi chạy nhảy.",
-        "correct": false
-      },
-      {
-        "text": "Bé bị va chạm với đồ vật trong nhà.",
         "correct": false
       }
     ]
@@ -4452,33 +4479,6 @@
     ]
   },
   {
-    "title": "Bạch cầu tăng gấp 20 lần do ung thư máu nhưng không triệu chứng",
-    "content": "Anh Mạnh, 32 tuổi, đã phát hiện bệnh ung thư máu khi đi khám sức khỏe vì thừa cân. Kết quả xét nghiệm cho thấy lượng bạch cầu của anh tăng gấp 20 lần so với mức bình thường, điều này là dấu hiệu cho thấy bệnh đang tiến triển mà không có triệu chứng rõ ràng. Các bác sĩ đã xác định anh mắc bạch cầu cấp loại M4, một dạng ung thư máu nguy hiểm, và đang tiến hành điều trị tích cực nhằm giảm số lượng bạch cầu và ngăn chặn sự phát triển của tế bào ác tính.",
-    "link": "https://vnexpress.net/bach-cau-tang-gap-20-lan-do-ung-thu-mau-nhung-khong-trieu-chung-4862874.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Tại sao bạch cầu của anh Mạnh lại tăng cao đến 20 lần?",
-    "answers": [
-      {
-        "text": "Vì anh Mạnh mắc ung thư máu.",
-        "correct": true
-      },
-      {
-        "text": "Vì anh Mạnh bị nhiễm virus.",
-        "correct": false
-      },
-      {
-        "text": "Vì anh Mạnh ăn uống không điều độ.",
-        "correct": false
-      },
-      {
-        "text": "Vì anh Mạnh thường xuyên tập thể dục.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Nhiều nhân giáp gây nổi bướu vùng cổ người phụ nữ",
     "content": "Bài viết mô tả trường hợp của chị Hiền, 54 tuổi, ở TP.HCM, bị bướu giáp đa nhân sau khi phát hiện nổi u ở cổ. Qua chẩn đoán, bác sĩ xác định chị mắc ung thư biểu mô tuyến giáp thể nhú biến thể nang, tuy nhiên bệnh có tiên lượng tốt với tỷ lệ sống trên 5 năm hơn 98%. Sau ca phẫu thuật thành công, bệnh nhân hồi phục nhanh chóng và cần theo dõi định kỳ để phòng ngừa.",
     "link": "https://vnexpress.net/nhieu-nhan-giap-gay-noi-buou-vung-co-nguoi-phu-nu-4862920.html",
@@ -4528,6 +4528,33 @@
       },
       {
         "text": "Căng thẳng tâm lý",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bạch cầu tăng gấp 20 lần do ung thư máu nhưng không triệu chứng",
+    "content": "Anh Mạnh, 32 tuổi, đã phát hiện bệnh ung thư máu khi đi khám sức khỏe vì thừa cân. Kết quả xét nghiệm cho thấy lượng bạch cầu của anh tăng gấp 20 lần so với mức bình thường, điều này là dấu hiệu cho thấy bệnh đang tiến triển mà không có triệu chứng rõ ràng. Các bác sĩ đã xác định anh mắc bạch cầu cấp loại M4, một dạng ung thư máu nguy hiểm, và đang tiến hành điều trị tích cực nhằm giảm số lượng bạch cầu và ngăn chặn sự phát triển của tế bào ác tính.",
+    "link": "https://vnexpress.net/bach-cau-tang-gap-20-lan-do-ung-thu-mau-nhung-khong-trieu-chung-4862874.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao bạch cầu của anh Mạnh lại tăng cao đến 20 lần?",
+    "answers": [
+      {
+        "text": "Vì anh Mạnh mắc ung thư máu.",
+        "correct": true
+      },
+      {
+        "text": "Vì anh Mạnh bị nhiễm virus.",
+        "correct": false
+      },
+      {
+        "text": "Vì anh Mạnh ăn uống không điều độ.",
+        "correct": false
+      },
+      {
+        "text": "Vì anh Mạnh thường xuyên tập thể dục.",
         "correct": false
       }
     ]
