--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -498,6 +498,33 @@
     ]
   },
   {
+    "title": "Một ngày luyện trình diễn tiêm kích Su-30MK2",
+    "content": "Vào sáng 18/3, tại sân bay Biên Hoà, Đồng Nai, các phi công đã thực hiện buổi huấn luyện trình diễn cho tiêm kích Su-30MK2, chuẩn bị cho sự kiện vào ngày 30/4. Trong buổi tập, các phi công phải thực hiện các động tác bay phức tạp và kiểm tra kỹ lưỡng các thiết bị trước khi cất cánh. Su-30MK2 là máy bay chiến đấu hiện đại nhất của quân đội Việt Nam, được trang bị nhiều loại vũ khí và có khả năng bay với tốc độ cao. Buổi tập này là một phần trong kế hoạch chuẩn bị cho màn trình diễn lớn vào dịp lễ sắp tới.",
+    "link": "https://vnexpress.net/mot-ngay-luyen-trinh-dien-tiem-kich-su-30mk2-4863011.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Lý do nào khiến các phi công huấn luyện tiêm kích Su-30MK2 tại Đồng Nai?",
+    "answers": [
+      {
+        "text": "Chuẩn bị cho buổi trình diễn vào ngày 30/4",
+        "correct": true
+      },
+      {
+        "text": "Để kiểm tra kỹ thuật máy bay",
+        "correct": false
+      },
+      {
+        "text": "Để thực hiện các bài tập thể lực",
+        "correct": false
+      },
+      {
+        "text": "Để tham dự một cuộc thi quốc tế",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Lỡ cơ hội làm cha vì 8 năm uống thuốc tăng sinh lực mua trên mạng",
     "content": "Một người đàn ông ngoài 40 tuổi đã tự ý uống thuốc tăng cường sinh lý mua trên mạng trong suốt 8 năm mà không có hiệu quả trong việc điều trị vô sinh. Sau khi không có con trong 9 năm, anh và vợ quyết định đến bệnh viện kiểm tra và nhận thấy tình trạng vô tinh vẫn không thay đổi. Bác sĩ cho biết việc uống thuốc không rõ nguồn gốc đã làm họ bỏ lỡ cơ hội điều trị đúng cách và nhấn mạnh tầm quan trọng của việc tham khảo ý kiến bác sĩ trước khi sử dụng bất kỳ loại thuốc nào.",
     "link": "https://vnexpress.net/lo-co-hoi-lam-cha-vi-8-nam-uong-thuoc-tang-sinh-luc-mua-tren-mang-4862846.html",
@@ -1530,6 +1557,118 @@
     ]
   },
   {
+    "title": "Ăn uống, sinh hoạt thế nào khi còn một quả thận?",
+    "content": "Bài viết cung cấp thông tin về cách sinh hoạt và chế độ ăn uống cho người còn một quả thận. Sau phẫu thuật cắt thận, người bệnh cần chú ý bảo vệ sức khỏe, tránh các môn thể thao va chạm và áp dụng chế độ dinh dưỡng lành mạnh, cân bằng, giảm muối và hạn chế thực phẩm chứa kali, phốt pho. Đồng thời, cần theo dõi sức khỏe định kỳ và thận trọng khi sử dụng thuốc không kê đơn.",
+    "link": "https://vnexpress.net/an-uong-sinh-hoat-the-nao-khi-con-mot-qua-than-4863313.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Cần lưu ý gì khi sinh hoạt và ăn uống cho người còn một quả thận?",
+    "answers": [
+      {
+        "text": "Cần tránh thực phẩm chứa nhiều kali và phốt pho.",
+        "correct": true
+      },
+      {
+        "text": "Có thể ăn thoải mái các loại thực phẩm chế biến sẵn.",
+        "correct": false
+      },
+      {
+        "text": "Nên tập các môn thể thao va chạm như bóng đá.",
+        "correct": false
+      },
+      {
+        "text": "Không cần kiểm tra sức khỏe định kỳ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "6 mẹo giúp bỏ thuốc lá",
+    "content": "Bài viết đưa ra 6 mẹo giúp người hút thuốc lá từ bỏ thói quen này, bao gồm việc lập kế hoạch cụ thể, củng cố ý chí, thay đổi lối sống lành mạnh, tìm kiếm phương pháp thay thế, tìm kiếm sự hỗ trợ từ người thân và sử dụng thuốc theo toa nếu cần. Việc cai thuốc lá cần sự kiên trì và quyết tâm cao, đồng thời nhận thức rõ ràng về tác hại của thuốc lá với sức khỏe.",
+    "link": "https://vnexpress.net/6-meo-giup-bo-thuoc-la-4863176.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Làm thế nào để bỏ thuốc lá hiệu quả?",
+    "answers": [
+      {
+        "text": "Lập kế hoạch cai thuốc và thay đổi lối sống.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần bỏ thuốc là sẽ không còn thèm thuốc.",
+        "correct": false
+      },
+      {
+        "text": "Hút thuốc ít hơn mỗi ngày là đủ.",
+        "correct": false
+      },
+      {
+        "text": "Không cần phải có sự hỗ trợ từ người khác.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 đồ uống góp phần tăng cường sinh lý nữ",
+    "content": "Bài viết giới thiệu 5 loại đồ uống có lợi giúp tăng cường sinh lý nữ, bao gồm trà xanh, sinh tố chuối, cà phê đen, rượu vang đỏ và nước ép lựu. Những đồ uống này chứa nhiều chất chống oxy hóa và vitamin, hỗ trợ cải thiện sức khỏe sinh lý và ổn định nội tiết tố. Bên cạnh việc sử dụng các loại đồ uống này, lối sống lành mạnh như tập thể dục và chế độ ăn uống cân bằng cũng rất quan trọng để nâng cao sức khỏe tổng thể của phụ nữ.",
+    "link": "https://vnexpress.net/5-do-uong-gop-phan-tang-cuong-sinh-ly-nu-4863206.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những loại đồ uống nào có thể giúp tăng cường sinh lý nữ?",
+    "answers": [
+      {
+        "text": "Trà xanh, sinh tố chuối, cà phê đen, rượu vang đỏ, nước ép lựu",
+        "correct": true
+      },
+      {
+        "text": "Nước ngọt có ga",
+        "correct": false
+      },
+      {
+        "text": "Trà sữa",
+        "correct": false
+      },
+      {
+        "text": "Sữa đặc có đường",
+        "correct": false
+      },
+      {
+        "text": "Nước lọc",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
+    "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
+    "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
+    "cat": "giai-tri",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Lee Jun Ki phản hồi như thế nào về thông tin trốn thuế?",
+    "answers": [
+      {
+        "text": "Anh đã nộp toàn bộ số tiền truy thu và khiếu nại quyết định của cơ quan thuế.",
+        "correct": true
+      },
+      {
+        "text": "Anh phủ nhận toàn bộ thông tin và không có bất kỳ phản hồi nào.",
+        "correct": false
+      },
+      {
+        "text": "Anh thừa nhận đã trốn thuế và chấp nhận hình phạt.",
+        "correct": false
+      },
+      {
+        "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "GAC tung ưu đãi ba dòng xe trong tháng 3",
     "content": "GAC Motor Việt Nam vừa công bố chương trình ưu đãi cho ba dòng xe gồm M6 Pro, M8 và GS8 trong tháng 3. Khách hàng mua M6 Pro sẽ nhận 7 năm bảo hành, miễn phí dịch vụ cứu hộ 24/7 và thêm đồng hồ thông minh cho phiên bản 1.5T GL. M8 cũng có các ưu đãi tương tự, với quà tặng tiền mặt cho bản GL Master, trong khi GS8 được miễn lệ phí trước bạ và hưởng chính sách bảo hành như trên.",
     "link": "https://vnexpress.net/gac-tung-uu-dai-ba-dong-xe-trong-thang-3-4863400.html",
@@ -1583,118 +1722,6 @@
       },
       {
         "text": "Đau bụng và khó tiêu",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "5 đồ uống góp phần tăng cường sinh lý nữ",
-    "content": "Bài viết giới thiệu 5 loại đồ uống có lợi giúp tăng cường sinh lý nữ, bao gồm trà xanh, sinh tố chuối, cà phê đen, rượu vang đỏ và nước ép lựu. Những đồ uống này chứa nhiều chất chống oxy hóa và vitamin, hỗ trợ cải thiện sức khỏe sinh lý và ổn định nội tiết tố. Bên cạnh việc sử dụng các loại đồ uống này, lối sống lành mạnh như tập thể dục và chế độ ăn uống cân bằng cũng rất quan trọng để nâng cao sức khỏe tổng thể của phụ nữ.",
-    "link": "https://vnexpress.net/5-do-uong-gop-phan-tang-cuong-sinh-ly-nu-4863206.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những loại đồ uống nào có thể giúp tăng cường sinh lý nữ?",
-    "answers": [
-      {
-        "text": "Trà xanh, sinh tố chuối, cà phê đen, rượu vang đỏ, nước ép lựu",
-        "correct": true
-      },
-      {
-        "text": "Nước ngọt có ga",
-        "correct": false
-      },
-      {
-        "text": "Trà sữa",
-        "correct": false
-      },
-      {
-        "text": "Sữa đặc có đường",
-        "correct": false
-      },
-      {
-        "text": "Nước lọc",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ăn uống, sinh hoạt thế nào khi còn một quả thận?",
-    "content": "Bài viết cung cấp thông tin về cách sinh hoạt và chế độ ăn uống cho người còn một quả thận. Sau phẫu thuật cắt thận, người bệnh cần chú ý bảo vệ sức khỏe, tránh các môn thể thao va chạm và áp dụng chế độ dinh dưỡng lành mạnh, cân bằng, giảm muối và hạn chế thực phẩm chứa kali, phốt pho. Đồng thời, cần theo dõi sức khỏe định kỳ và thận trọng khi sử dụng thuốc không kê đơn.",
-    "link": "https://vnexpress.net/an-uong-sinh-hoat-the-nao-khi-con-mot-qua-than-4863313.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Cần lưu ý gì khi sinh hoạt và ăn uống cho người còn một quả thận?",
-    "answers": [
-      {
-        "text": "Cần tránh thực phẩm chứa nhiều kali và phốt pho.",
-        "correct": true
-      },
-      {
-        "text": "Có thể ăn thoải mái các loại thực phẩm chế biến sẵn.",
-        "correct": false
-      },
-      {
-        "text": "Nên tập các môn thể thao va chạm như bóng đá.",
-        "correct": false
-      },
-      {
-        "text": "Không cần kiểm tra sức khỏe định kỳ.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
-    "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
-    "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
-    "cat": "giai-tri",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Lee Jun Ki phản hồi như thế nào về thông tin trốn thuế?",
-    "answers": [
-      {
-        "text": "Anh đã nộp toàn bộ số tiền truy thu và khiếu nại quyết định của cơ quan thuế.",
-        "correct": true
-      },
-      {
-        "text": "Anh phủ nhận toàn bộ thông tin và không có bất kỳ phản hồi nào.",
-        "correct": false
-      },
-      {
-        "text": "Anh thừa nhận đã trốn thuế và chấp nhận hình phạt.",
-        "correct": false
-      },
-      {
-        "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "6 mẹo giúp bỏ thuốc lá",
-    "content": "Bài viết đưa ra 6 mẹo giúp người hút thuốc lá từ bỏ thói quen này, bao gồm việc lập kế hoạch cụ thể, củng cố ý chí, thay đổi lối sống lành mạnh, tìm kiếm phương pháp thay thế, tìm kiếm sự hỗ trợ từ người thân và sử dụng thuốc theo toa nếu cần. Việc cai thuốc lá cần sự kiên trì và quyết tâm cao, đồng thời nhận thức rõ ràng về tác hại của thuốc lá với sức khỏe.",
-    "link": "https://vnexpress.net/6-meo-giup-bo-thuoc-la-4863176.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Làm thế nào để bỏ thuốc lá hiệu quả?",
-    "answers": [
-      {
-        "text": "Lập kế hoạch cai thuốc và thay đổi lối sống.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cần bỏ thuốc là sẽ không còn thèm thuốc.",
-        "correct": false
-      },
-      {
-        "text": "Hút thuốc ít hơn mỗi ngày là đủ.",
-        "correct": false
-      },
-      {
-        "text": "Không cần phải có sự hỗ trợ từ người khác.",
         "correct": false
       }
     ]
@@ -2044,28 +2071,32 @@
     ]
   },
   {
-    "title": "5 món ăn thường xuyên có thể phòng bệnh tim",
-    "content": "Bài viết đề cập đến 5 món ăn có thể giúp phòng ngừa bệnh tim, bao gồm dầu ôliu, chocolate đen, cà chua, hạt và tỏi. Dầu ôliu chứa chất béo không bão hòa đơn và polyphenol có tác dụng giảm viêm và cholesterol. Chocolate đen với hàm lượng ca cao cao có flavonoid giúp cải thiện lưu lượng máu và giảm huyết áp. Các loại hạt và cà chua cũng giàu chất dinh dưỡng hỗ trợ sức khỏe tim mạch. Tỏi với allicin có khả năng bảo vệ tim và ngăn ngừa cục máu đông.",
-    "link": "https://vnexpress.net/5-mon-an-thuong-xuyen-co-the-phong-benh-tim-4863283.html",
+    "title": "42 tuổi mới phát hiện có hai tử cung",
+    "content": "Chị Hạnh, 42 tuổi, đã phát hiện mình có hai tử cung và hai âm đạo sau khi đi khám do chu kỳ kinh kéo dài 14 ngày. Tình trạng này khá hiếm gặp, chỉ chiếm 5% các dị tật tử cung và thường không được phát hiện nếu không có kiểm tra y tế. Sau khi phát hiện, bác sĩ đã phẫu thuật cắt bỏ một tử cung chứa khối u xơ lớn để cải thiện sức khỏe cho chị. Mặc dù có hai tử cung, chị Hạnh vẫn có khả năng mang thai và có kinh nguyệt bình thường.",
+    "link": "https://vnexpress.net/42-tuoi-moi-phat-hien-co-hai-tu-cung-4862862.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những món ăn nào có thể giúp phòng ngừa bệnh tim?",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Chị Hạnh phát hiện điều gì sau khi đi khám phụ khoa?",
     "answers": [
       {
-        "text": "Dầu ôliu, chocolate đen, cà chua, hạt, tỏi",
+        "text": "Có hai tử cung và hai âm đạo",
         "correct": true
       },
       {
-        "text": "Thịt đỏ, thực phẩm chiên, bánh ngọt, đồ uống có ga",
+        "text": "Có một tử cung và một âm đạo",
         "correct": false
       },
       {
-        "text": "Cá hồi, rau xanh, sữa chua, nước trái cây",
+        "text": "Có khối u ác tính trong tử cung",
         "correct": false
       },
       {
-        "text": "Mì gói, snack, kem, đồ ăn nhanh",
+        "text": "Có vấn đề về tim mạch",
+        "correct": false
+      },
+      {
+        "text": "Có dấu hiệu mang thai",
         "correct": false
       }
     ]
@@ -2102,32 +2133,28 @@
     ]
   },
   {
-    "title": "42 tuổi mới phát hiện có hai tử cung",
-    "content": "Chị Hạnh, 42 tuổi, đã phát hiện mình có hai tử cung và hai âm đạo sau khi đi khám do chu kỳ kinh kéo dài 14 ngày. Tình trạng này khá hiếm gặp, chỉ chiếm 5% các dị tật tử cung và thường không được phát hiện nếu không có kiểm tra y tế. Sau khi phát hiện, bác sĩ đã phẫu thuật cắt bỏ một tử cung chứa khối u xơ lớn để cải thiện sức khỏe cho chị. Mặc dù có hai tử cung, chị Hạnh vẫn có khả năng mang thai và có kinh nguyệt bình thường.",
-    "link": "https://vnexpress.net/42-tuoi-moi-phat-hien-co-hai-tu-cung-4862862.html",
+    "title": "5 món ăn thường xuyên có thể phòng bệnh tim",
+    "content": "Bài viết đề cập đến 5 món ăn có thể giúp phòng ngừa bệnh tim, bao gồm dầu ôliu, chocolate đen, cà chua, hạt và tỏi. Dầu ôliu chứa chất béo không bão hòa đơn và polyphenol có tác dụng giảm viêm và cholesterol. Chocolate đen với hàm lượng ca cao cao có flavonoid giúp cải thiện lưu lượng máu và giảm huyết áp. Các loại hạt và cà chua cũng giàu chất dinh dưỡng hỗ trợ sức khỏe tim mạch. Tỏi với allicin có khả năng bảo vệ tim và ngăn ngừa cục máu đông.",
+    "link": "https://vnexpress.net/5-mon-an-thuong-xuyen-co-the-phong-benh-tim-4863283.html",
     "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Chị Hạnh phát hiện điều gì sau khi đi khám phụ khoa?",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những món ăn nào có thể giúp phòng ngừa bệnh tim?",
     "answers": [
       {
-        "text": "Có hai tử cung và hai âm đạo",
+        "text": "Dầu ôliu, chocolate đen, cà chua, hạt, tỏi",
         "correct": true
       },
       {
-        "text": "Có một tử cung và một âm đạo",
+        "text": "Thịt đỏ, thực phẩm chiên, bánh ngọt, đồ uống có ga",
         "correct": false
       },
       {
-        "text": "Có khối u ác tính trong tử cung",
+        "text": "Cá hồi, rau xanh, sữa chua, nước trái cây",
         "correct": false
       },
       {
-        "text": "Có vấn đề về tim mạch",
-        "correct": false
-      },
-      {
-        "text": "Có dấu hiệu mang thai",
+        "text": "Mì gói, snack, kem, đồ ăn nhanh",
         "correct": false
       }
     ]
